--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 *.iml
-.PNG
 .gradle
 /local.properties
 /.idea/workspace.xml
@@ -7,3 +6,4 @@
 .DS_Store
 /build
 /captures
+/app/src/main/res/drawable/ucl_som_logo.PNG
