--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,6 +98,23 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="mansci.gradesapp.ManSciSecondYear" />
         </activity>
+        <activity
+            android:name=".ManSciFirstYear"
+            android:label="@string/title_activity_man_sci_first_year"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="mansci.gradesapp.MainActivity" />
+        </activity>
+        <activity
+            android:name=".manSciModules.MFOM1"
+            android:label="@string/title_activity_mfom1"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".manSciModules.cat"
+            android:label="@string/title_activity_cat"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
