--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
         <activity
             android:name=".manSciModules.MFOM3"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_mfom3"
             android:parentActivityName=".ManSciSecondYear"
             android:theme="@style/AppTheme.NoActionBar">
@@ -38,6 +39,7 @@
         <activity
             android:name=".manSciModules.CT"
             android:label="@string/title_activity_ct"
+            android:configChanges="orientation|screenSize"
             android:parentActivityName=".ManSciSecondYear"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -47,6 +49,7 @@
         <activity
             android:name=".manSciModules.Finance"
             android:label="@string/title_activity_finance"
+            android:configChanges="orientation|screenSize"
             android:parentActivityName=".ManSciSecondYear"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -56,6 +59,7 @@
         <activity
             android:name=".manSciModules.Strategy"
             android:label="@string/title_activity_strategy"
+            android:configChanges="orientation|screenSize"
             android:parentActivityName=".ManSciSecondYear"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -65,6 +69,7 @@
         <activity
             android:name=".manSciModules.Design"
             android:label="@string/title_activity_design"
+            android:configChanges="orientation|screenSize"
             android:parentActivityName=".ManSciSecondYear"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -74,6 +79,7 @@
         <activity
             android:name=".manSciModules.PTOM"
             android:label="@string/title_activity_ptom"
+            android:configChanges="orientation|screenSize"
             android:parentActivityName=".ManSciSecondYear"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -83,6 +89,7 @@
         <activity
             android:name=".manSciModules.DA2"
             android:label="@string/title_activity_da2"
+            android:configChanges="orientation|screenSize"
             android:parentActivityName=".ManSciSecondYear"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -92,6 +99,7 @@
         <activity
             android:name=".manSciModules.Minor"
             android:label="@string/title_activity_minor"
+            android:configChanges="orientation|screenSize"
             android:parentActivityName=".ManSciSecondYear"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -110,11 +118,14 @@
         <activity
             android:name=".manSciModules.MFOM1"
             android:label="@string/title_activity_mfom1"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".manSciModules.cat"
             android:label="@string/title_activity_cat"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
