--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -189,6 +189,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="mansci.gradesapp.ManSciFirstYear" />
         </activity>
+        <activity
+            android:name=".viewModules"
+            android:label="@string/title_activity_view_modules"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="mansci.gradesapp.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
